Space between minute and meridiem fields in time inputs is too large https://bugs.webkit.org/show_bug.cgi?id=219217 <rdar://problem/71637133>

Reviewed by Devin Rousso.

Source/WebCore:

The space between minute and meridiem fields in time inputs appears two
CSS pixels larger than a space character. This appearance is due to the
presence of a 1px padding on field elements, which exists to prevent
selected fields from appearing squished.

To fix, apply a negative margin on each side of the element that has a
space character. This pulls fields closer together and negates the
effect of the field padding on the appearance of the space.

* html/shadow/DateTimeEditElement.cpp:
(WebCore::DateTimeEditBuilder::visitLiteral):

LayoutTests:

Rebaselined tests to match new appearance.

* platform/mac-catalina/fast/forms/time/time-input-rendering-basic-expected.txt:
* platform/mac-mojave/fast/forms/time/time-input-rendering-basic-expected.txt:
* platform/mac-wk2/fast/forms/time/time-input-rendering-basic-expected.txt:


Canonical link: https://commits.webkit.org/231857@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270148 268f45cc-cd09-0410-ab3c-d52691b4dbfc